--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -9,6 +9,14 @@
     .categories-menu{
         padding-left: 0;
     }
+
+    .referenceCount{
+        font-size: 0.8rem;
+    }
+
+    .itemDescriptionLabel{
+        line-height: 1rem;
+    }
 }
 
 @media all and(min-width:501px) and(max-width:654px){
@@ -23,11 +31,19 @@
     .foodCategories > a{
         font-size: 0.8rem;
     }
+
+    .referenceCount{
+        font-size: 1rem;
+    }
 }
 
 @media all and(min-width:655px){
     .foodCategories{
         margin-left: 2rem;
+    }
+
+    .itemDescriptionLabel{
+        line-height: 1.2rem;
     }
 }
 
@@ -138,6 +154,9 @@
 
 .categoryTitle{
     margin-top: 2rem;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
 }
 
 img{
@@ -151,4 +170,62 @@ img{
     width: 100%;
     border-bottom: 1px solid #ececec;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,.02);
+}
+
+.referenceCount{
+    margin-left: 8px;
+}
+
+.addItemButton{
+    border-radius: 4px;
+    background: rgb(74, 74, 74);
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 32px;
+    text-align: center;
+    vertical-align: middle;
+    color: #fff;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,.06);
+    min-width: 116px;
+    height: 32px;
+    position: relative;
+    transition-duration: .2s;
+    cursor: pointer;
+    margin: 0.4rem 0.4rem 0.4rem 0.4rem;
+}
+
+.itemPriceBlock{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.itemDescriptionBloc{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+}
+
+.itemPrice{
+    align-self: flex-end;
+    margin: 0.4rem 0.4rem 0.4rem 0.4rem;
+}
+
+.itemDescription{
+    margin-top: 1rem;
+    margin-left: 0.4rem;
+}
+
+.itemDescriptionLabel{
+    opacity: 0.9;
+    text-overflow: ellipsis;
+    width: 95%;
+    line-height: 1.2rem;
+    height: 48px;
+    overflow: hidden;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    margin-left: 0.4rem;
+    font-size:0.8rem !important;
 }
