--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,7 @@
 @import '~material-design-icons/iconfont/material-icons.css';
 
 html, body { height: 100%; }
-body { margin: 0; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .center-vertical{
     display: flex;
@@ -11,4 +11,29 @@ body { margin: 0; }
 
 .bold{
   font-weight: 600;
+}
+
+.title-bigger{
+  font-family: Titillium Web,AvenirNext,Avenir,Helvetica,Arial,sans-serif;
+  font-weight: 700;
+  color: #2a2a2a;
+  line-height: 23px;
+  font-size: 30px;
+}
+
+.text-underline{
+  font-family: Titillium Web,Avenir,AvenirNext,Helvetica,Arial,sans-serif;
+  font-size: 0.95rem;
+  color: #444!important;
+}
+
+.text-title-regular{
+  font-size: 18px;
+  font-weight: 500;
+  font-family: Titillium Web,Avenir,AvenirNext,Helvetica,Arial,sans-serif;
+  color: #2a2a2a;
+}
+
+.capitalize::first-letter{
+  text-transform: uppercase;
 }
