--- a/src/app/modules/cart/cart.component.html
+++ b/src/app/modules/cart/cart.component.html
@@ -5,15 +5,33 @@
             <mat-icon id="close-icon">close</mat-icon>
         </button>
     </div>
-    <div class="vertical-middle">
-        <img src="/assets/images/watermelon.gif" alt="panier vide">
-        <div class="emptyCartDiv">
-            <div class="dark-title center">Votre panier est vide</div>
-            <div class="emptyCartDescription center">Découvrez notre carte interactive et visuelle</div>
+    <div class="middleContainer">
+        <div *ngIf="!hasCartItems" class="vertical-middle">
+            <img src="/assets/images/watermelon.gif" alt="panier vide">
+            <div class="emptyCartDiv">
+                <div class="dark-title center">Votre panier est vide</div>
+                <div class="emptyCartDescription center">Découvrez notre carte interactive et visuelle</div>
+            </div>
         </div>
-        <button>C'est parti !</button>
+        <div *ngIf="hasCartItems" class="itemRowsContainer">
+            <div *ngFor="let item of cartItems" class="item">
+                <div *ngIf="item.Product.Photo" class="itemPhoto center-vertical"><img src="{{item.Product.Photo}}" alt="{{item.Product.Name}}"></div>
+                <div class="itemDescriptionBloc fullwidth">
+                    <div class="itemDescription text-title-regular capitalize">{{ item.Product.Name}}</div>
+                    <div class="itemDescriptionLabel text-underline capitalize">{{ item.Product.Description }}</div>
+                    <div class="itemPriceBlock">
+                        <div class="itemPrice">{{ item.Product.UnitPrice | currency:currency }}</div>
+                        <button class="addItemButton">Ajouter</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="cartActions" mat-dialog-actions>
+    <div *ngIf="hasCartItems" class="cartActions" mat-dialog-actions>
+        <div class="totalAmountDiv">
+            <div class="totalAmountText">Montant total</div>
+            <div class="totalAmountPrice bold">21.00 £</div>
+        </div>
         <button id="confirmOrder">Passer la commande</button>
     </div>
 </div>
