--- a/src/app/modules/cart/cart.component.scss
+++ b/src/app/modules/cart/cart.component.scss
@@ -1,14 +1,22 @@
+@media all and(max-width: 600px){
+    .headerDialog > h1{
+        margin-left: 10%;
+    }
+  }
+  
+  @media all and(min-width: 601px){
+    .headerDialog > h1{
+        margin-left: 20%;
+    }
+  }
+
 .headerDialog{
     display: flex;
     flex-direction: row;
-    background-color: powderblue;
+    //background-color: powderblue;
     align-items: center;
     justify-content: space-between;
     border-bottom: 1px solid #ececec;
-}
-
-.closeDialogButton{
-    cursor: pointer;
 }
 
 .itemCart{
@@ -42,12 +50,16 @@
     color: white;
     background: rgb(118, 120, 204) none repeat scroll 0% 0%;
     height: 3.4rem;
+    margin-left: 1rem;
 }
 
 .cartActions{
     position: absolute;
     bottom: 0;
     width: 100%;
+    background: #fff;
+    left: 0;
+    right: 0;
 }
 
 .mat-dialog-container{
@@ -60,4 +72,19 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.middleContainer{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.totalAmountDiv{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 90%;
+    line-height: 3rem;
+    margin-left: 1rem;
 }
