--- a/src/app/modules/cart/cart.component.html
+++ b/src/app/modules/cart/cart.component.html
@@ -21,7 +21,6 @@
                         <div class="itemDescription text-title-regular capitalize">{{ item.Product.Name}}</div>
                         <div class="itemDescriptionLabel text-underline capitalize">{{ item.Product.Description }}</div>
                         <div class="itemPriceBlock">
-                            <div class="itemPrice">{{ item.Product.UnitPrice * item.Quantity | currency: 'EUR' }}</div>
                             <div class="cartButton">
                                 <button id="decrementCart" class="buttonCart" (click)="decrementItemCounter(item)" ><mat-icon>remove</mat-icon></button>
                                 <div class="cartItemcount" [(ngModel)]="item.Quantity" >{{ item.Quantity}}</div>
@@ -29,6 +28,7 @@
                             </div>
                         </div>
                     </div>
+                    <div class="itemPrice bold">{{ item.Product.UnitPrice * item.Quantity | currency: 'EUR' }}</div>
                 </div>
             </div>
         </div>
