--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -212,7 +212,7 @@ img{
     position: relative;
     transition-duration: .2s;
     cursor: pointer;
-    margin: 0.4rem 0.4rem 0.4rem 0.4rem;
+    margin: 0 0.4rem 0 0.4rem;
 }
 
 .itemPriceBlock{
