--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -12,10 +12,7 @@
         <div class="rightIconsDiv center-vertical">
                 <ul class="rightIcons">
                     <li>
-                        <button mat-icon-button>
-                            <span class="cartItemCount">4</span>
-                            <mat-icon class="shoppingCartIcon" (click)="displayCartDialog()">shopping_cart</mat-icon>
-                        </button>
+                        <app-cart-status></app-cart-status>
                     </li>
                 </ul>
         </div>
