fix: display icon or not if admin or normal

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -12,7 +12,7 @@
         <div class="rightIconsDiv center-vertical">
                 <ul class="rightIcons">
                     <li>
-                        <app-cart-status></app-cart-status>
+                        <app-cart-status *ngIf="!isAdminPath"></app-cart-status>
                     </li>
                 </ul>
         </div>
