--- a/src/app/modules/validation/validation.component.html
+++ b/src/app/modules/validation/validation.component.html
@@ -14,4 +14,10 @@
         </div>
         <div class="pickUpDiv">Votre commande</div>
     </div>
+    <div class="orderDiv">
+        <div class="orderDivHeader">
+            Votre commande
+        </div>
+        <app-cart-rows></app-cart-rows>
+    </div>
 </div>
