--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -43,6 +43,10 @@ ul li {
     height: 3rem;
 }
 
+.logoDiv{
+    cursor: pointer;
+}
+
 .headerBandeau{
     background-color: #303030;
     color: white;
