--- a/src/styles.scss
+++ b/src/styles.scss
@@ -100,3 +100,13 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   text-align: center;
   background-color: #fff;
 }
+
+.mainDiv{
+  //background-size: contain;
+  //background-repeat: no-repeat;
+  //background-position: center 50%;
+  background-color: rgb(249, 249, 249);// rgb(235, 228, 213);
+  //background-image: url("/assets/images/KayCafetHomeBackground-min.png");
+  //background-attachment: fixed;
+  width: 100%;
+}
