--- a/src/app/modules/cart/cart-rows/cart-rows.component.html
+++ b/src/app/modules/cart/cart-rows/cart-rows.component.html
@@ -7,7 +7,7 @@
         </div>
     </div>
     <div *ngIf="hasCartItems" class="itemRowsContainer">
-        <div *ngFor="let item of cartItems" class="basket-product">
+        <div *ngFor="let item of cartItems" [ngClass]="{'nopadding': !isFromBasket}" class="basket-product">
             <div class="basketContainer">
                 <!-- <div *ngIf="item.Product.Photo" class="itemPhoto center-vertical"><img src="{{item.Product.Photo}}" alt="{{item.Product.Name}}"></div> -->
                 <div class="itemDescriptionBloc"> <!--fullwidth-->
