--- a/src/app/modules/cart/cart-rows/cart-rows.component.scss
+++ b/src/app/modules/cart/cart-rows/cart-rows.component.scss
@@ -46,10 +46,12 @@
     background: #fff;
     border-top: 1px solid #ececec;
     border-bottom: 1px solid #ececec;
-    padding: 16px;
-    padding-top: 8px;
-    padding-bottom: 8px;
+    padding: 8px 16px 8px 16px;
     display: flex;
+}
+
+.nopadding{
+    padding: 8px 0 8px 0;
 }
 
 .itemPhoto{
