--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,6 +28,11 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   font-weight: 600;
 }
 
+.half-bold{
+  font-size: 18px;
+  font-weight: 600;
+}
+
 .title-bigger{
   font-family: Titillium Web,AvenirNext,Avenir,Helvetica,Arial,sans-serif;
   font-weight: 700;
